deployment/base/test/generated_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/owner: "null"
  labels:
    app: trive-iframe
  name: trive-iframe
  namespace: trive-iframe-test
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: trive-iframe
  template:
    metadata:
      labels:
        app: trive-iframe
    spec:
      containers:
      - image: 869935072236.dkr.ecr.eu-west-1.amazonaws.com/frontend/trive-iframe-project/trive-iframe-test:69450601
        imagePullPolicy: IfNotPresent
        name: trive-iframe
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 128Mi
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: docker-regcred
      nodeSelector:
        eks.amazonaws.com/nodegroup: node-group-linux-private-1
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 40
