deployment/base/test/generated_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: trive-iframe
  name: trive-iframe-service
  namespace: trive-iframe-test
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: trive-iframe
  sessionAffinity: None
  type: ClusterIP
